--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://strivenword.github.io/"
 languageCode = "eo"
 defaultContentLanguage = "eo"
 title = "Resti"
